# SentinelGit

./: .gitignore  .sgit.toml  Cargo.toml  README.md  install.sh  test_safe.txt
src/: config.rs  lib.rs  main.rs
src/chronos/: mod.rs  storage.rs  watcher.rs
src/core/: mod.rs
src/features/: impact_radar.rs  interactive_rebase.rs  mod.rs  smart_context.rs
src/sentinel/: binary_blocker.rs  entropy.rs  mod.rs  regex_guard.rs
src/ui/: commit_wizard.rs  dashboard.rs  diff_viewer.rs  mod.rs  shelf.rs  zen_mode.rs
