[package]
name = "sgit"
version = "0.1.0"
edition = "2021"
authors = ["Raul <raul@example.com>"]
description = "A high-performance TUI Git client with proactive security and time machine features."

[dependencies]
git2 = "0.18"
ratatui = "0.26"
crossterm = "0.27"
rayon = "1.10"
sled = "0.34"
notify = "6.1"
similar = "2.5"
zstd = "0.13"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
# For entropy calculation, we can implement it ourselves or use a small crate if needed.
# We'll implement a simple Shannon entropy calculator in the sentinel module.

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
